--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8"/>
-    <title>ohad.space</title>
+    <title>josephliou.me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css"/>
   </head>
@@ -20,8 +20,6 @@
 	<div> I'm a CS student at UGA with an interest in 
 	combinatronics and machine learning <div>
         <div class="space2"/>
-        <div>Some stuff I'm working on:</div>
-        <div class="space2"></div>
       </div>
     </div>
   </body>
