--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8"/>
-    <title>josephliou.me</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css"/>
-  </head>
-  <body>
-    <div class="navbar">
-      <a class="tab tab-selected" href="#">Home</a>
-      <a class="tab" href="/about.html">About</a>
-      <a class="tab" href="/projects.html">Projects</a>
-      <a class="tab" href="/resume.pdf">Resume</a>
-    </div>
-    <div id="content">
-      <div class="box">
-        <div>Hey, I'm Joey.</div>
-        <div class="space"/>
-	<div> I'm a CS student at UGA with an interest in 
-	combinatronics and machine learning <div>
-        <div class="space2"/>
-      </div>
-    </div>
-  </body>
+
+    <head>
+        <meta charset="utf-8"/>
+        <title>josephliou.me</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css"/>
+    </head>
+
+    <body>
+        <header class="header">
+            <div class="container">                       
+                <img class="profile-image img-responsive pull-left" src="assets/images/projects/profile.png" alt="Bryan Tamada" />
+                <div class="profile-content pull-left">
+                    <h1 class="name">Bryan Tamada</h1>
+                    <h2 class="desc">Software Engineer | iOS Developer | RPi2 Hobbyist</h2>   
+                    <ul class="social list-inline">         
+                        <li><a href="https://www.linkedin.com/in/btamada"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/btamada"><i class="fa fa-github-alt"></i></a></li>                       
+                    </ul> 
+                </div><!--//profile-->            
+            </div><!--//container-->
+        </header><!--//header-->
+    </body>
 </html>
