--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <body>
         <header class="header">
             <div class="container">                       
-                <img class="profile-image img-responsive pull-left" src="assets/images/projects/profile.png" alt="Bryan Tamada" />
                 <div class="profile-content pull-left">
-                    <h1 class="name">Bryan Tamada</h1>
-                    <h2 class="desc">Software Engineer | iOS Developer | RPi2 Hobbyist</h2>   
+                    <h1 class="name">Joseph Liou</h1>
+                    <h2 class="desc">Software Engineer | Computer Science Major @ University of Georgia</h2>   
                     <ul class="social list-inline">         
                         <li><a href="https://www.linkedin.com/in/btamada"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://github.com/btamada"><i class="fa fa-github-alt"></i></a></li>                       
