--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header class="header">
             <div class="container">                       
-                <div class="profile-content">
+                <div class="profile-content center">
                     <h1 class="name">Joseph Liou</h1>
                     <h2 class="desc">Software Engineer | Computer Science Major @ University of Georgia</h2>   
                     <ul class="social list-inline">         
