--- a/index.html
+++ b/index.html
@@ -16,5 +16,22 @@
                 </div><!--//profile-->            
             </div><!--//container-->
         </header><!--//header-->
+        
+        <div class="container sections-wrapper">
+            <div class="row">
+                <div class="primary col-md-8 col-sm-12 col-xs-12">
+                    <section class="about section">
+                        <div class="section-inner">
+                            <h2 class="heading">About Me</h2>
+                            <div class="content">
+                                <p>
+                                    Hi, I'm a student at the University of Georgia studying Computer Science.
+                                </p>
+                            </div><!--//content-->
+                        </div><!--//section-inner-->                 
+                    </section><!--//section-->
+                </div><!--//primary col-->
+            </div><!--//row-->
+        </div><!--//container-->
     </body>
 </html>
