--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <div class="item featured text-center">
                                     <h3 class="title">Asteroids</h3>
                                     <div class="featured-image">
-                                        <img class="img-responsive" src="assets/images/projects/dokodemo.png" alt="featured project" />
+                                        <img class="img-responsive" src="resources/asteroids.png" alt="asteroids" />
                                         
                                     <div class="desc text-left">                                    
                                         <p style="text-align:center;">
@@ -56,7 +56,7 @@
                             
                                 <!--//CHESS-->
                                 <div class="item row">
-                                    <img class="col-md-4 col-sm-4 col-xs-12 img-responsive" src="assets/images/projects/cacoo.png" alt="Nulab Cacoo API" />
+                                    <img class="col-md-4 col-sm-4 col-xs-12 img-responsive" src="resources/asteroids.png" alt="chess" />
                                     <div class="desc col-md-8 col-sm-8 col-xs-12">
                                         <h3 class="title">Chess Game</h3>
                                         <p>A fully functional Chess game made with Javafx 8.</p>
