--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     <div class="featured-image">
                                         <img class="img-responsive" src="resources/asteroids.png" alt="asteroids" />
                                         
-                                    <div class="desc text-left">                                    
+                                    <div class="desc text-center">                                    
                                         <p style="text-align:center;">
                                             A fully functional Asteroids clone made in Javafx 8.
                                         </p>
