--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
                 </div><!--//profile-->            
             </div><!--//container-->
         </header><!--//header-->
-        
+
+        <div id="content">
+            <div class="box">
+                <h3>
+                    About Me
+                </h3>
+                <div class="space2"></div>
+                    I'm a second-year student at University of Georgia persuing a B.S. in Computer Science. 
+                    I currently have an interest in combinatronics as well as data science, and I am actively 
+                    looking for opportunities to learn more about these fields. 
+            </div><!--//box-->
+        </div><!--//content-->
     </body>
 </html>
