--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
     <head>
@@ -16,6 +17,8 @@
                 </div><!--//profile-->            
             </div><!--//container-->
         </header><!--//header-->
+
+        <p> test </p>
 
         <div id="content">
             <div class="box">
