--- a/index.html
+++ b/index.html
@@ -18,18 +18,28 @@
             </div><!--//container-->
         </header><!--//header-->
 
-        <p> test </p>
-
         <div id="content">
             <div class="box">
                 <h3>
                     About Me
                 </h3>
-                <div class="space2"></div>
+                <div class="space"></div>
                     I'm a second-year student at University of Georgia persuing a B.S. in Computer Science. 
                     I currently have an interest in combinatronics as well as data science, and I am actively 
                     looking for opportunities to learn more about these fields. 
             </div><!--//box-->
+
+            <div class="box">
+                <h3>
+                    Asteroids
+                </h3>
+                <div class="space"></div>
+                    For my Software Development course (CS1302), we were asked to make a clone 
+                    of a given list of arcade games, and I chose to go with Asteroids. This 
+                    game was made in Javafx 8. We used a simple physics engine to handle 
+                    collisions. 
+            </div><!--//box-->
+
         </div><!--//content-->
     </body>
 </html>
