add asteroids image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <h3>
                     About Me
                 </h3>
+                <img class="scrot" src="resources/asteroids.png" alt="Asteroids Gameplay"/>
                 <div class="space"></div>
                     I'm a second-year student at University of Georgia persuing a B.S. in Computer Science. 
                     I currently have an interest in combinatronics as well as data science, and I am actively 
