added chess project

--- a/index.html
+++ b/index.html
@@ -41,6 +41,21 @@
                     collisions. 
             </div><!--//box-->
 
+            <div class="box">
+                <h3>
+                    Chess
+                </h3>
+                <img class="scrot" src="resources/chess.png" alt="Chess Gameplay"/>
+                    For my Software Development course (CS1302), we were tasked to make a 
+                    board game, and I chose to develop chess. This game was made in Javafx 8. 
+                    It includes both player vs player, player vs computer, and even computer vs 
+                    computer settings. The computer player was made using a simple machine learning 
+                    algorithm(minimax) and uses alpha-beta pruning to improve its performance. 
+                    The computer player also includes an option for varying difficulty levels.
+                <div class="space"></div>
+
+            </div><!--//box-->
+
         </div><!--//content-->
     </body>
 </html>
