--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
                 <div class="space"></div>
 
             </div><!--//box-->
+            <div class="box">
+                <h3>
+                    Sorting Simulation
+                </h3>
+                <img class="scrot" src="resources/sorting-sim.png" alt="Sorting Example"/>
+		    I created a sorting simulation application using Javafx to improve my 
+		    knowledge on both sorting algorithms and front-end design. I also used 
+		    this to teach and explain to peers how different sorting algorithms worked, 
+		    their time complexities, and their stability.
+
+                <div class="space"></div>
+
+            </div><!--//box-->
+
 
         </div><!--//content-->
     </body>
