--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3>
                     Sorting Simulation
                 </h3>
-                <img class="scrot" src="resources/sorting-sim.png" alt="Sorting Example"/>
+                <img class="scrot" src="resources/sorting-sim.PNG" alt="Sorting Example"/>
 		    I created a sorting simulation application using Javafx to improve my 
 		    knowledge on both sorting algorithms and front-end design. I also used 
 		    this to teach and explain to peers how different sorting algorithms worked, 
