--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </h3>
                 <div class="space"></div>
                     I'm a second-year student at University of Georgia persuing a B.S. in Computer Science. 
-                    I currently have an interest in combinatronics as well as data science, and I am actively 
-                    looking for opportunities to learn more about these fields. 
+                    I currently have an interest in combinatronics, data science, and software engineering. 
+		    I am actively looking for opportunities to delve deeper and learn more in these fields!
             </div><!--//box-->
 
             <div class="box">
